# esp32_imu

./: CMakeLists.txt  Dockerfile  README.md  package.xml
img/: figure_results.m  plot.py  results.csv
launch/: imu.launch.py
scripts/: test_bluetooth.py
src/: firmware.ino  imu_publisher.py  motion_estimator.py
src/WiFiScan/: WiFiScan.ino
src/test_BT/: test_BT.ino
